--- a/loli.cabal
+++ b/loli.cabal
@@ -4,7 +4,7 @@ Build-type:           Simple
 Synopsis:             loli
 Description:
         
-    A minimum web development DSL
+    A minimum web development DSL in Haskell
 
 License:              BSD3
 License-file:         LICENSE
@@ -14,19 +14,15 @@ Build-Depends:        base
 Cabal-version:        >= 1.2
 category:             Web
 homepage:             http://github.com/nfjinjing/loli
-data-files:           readme.md, changelog.md, Nemesis, known-issues.md
+data-files:           readme.md, changelog.md, Nemesis, known-issues.md, src/Test.hs
 
 library
   ghc-options: -Wall
-  build-depends: base
+  build-depends: base > 4 && <= 5, data-default, hack >= 2009.5.19, hack-contrib >= 2009.6.25, utf8-string, mps >= 2009.6.25, mtl
   hs-source-dirs: src/
   exposed-modules:  
-                      Template
-
-Executable            launcher
-  ghc-options:        -Wall
-  build-depends:      base
-  hs-source-dirs:     src/
-  main-is:            Launcher.hs
-  other-modules:      
-                      Template.Other
+                      Network.Loli
+  other-modules:
+                      Network.Loli.Config
+                      Network.Loli.DSL
+                      Network.Loli.Engine
