--- a/loli.cabal
+++ b/loli.cabal
@@ -1,5 +1,5 @@
 Name:                 loli
-Version:              2009.6.26
+Version:              2009.6.27
 Build-type:           Simple
 Synopsis:             A minimum web dev DSL in Haskell
 Description:
@@ -14,7 +14,7 @@ Build-Depends:        base
 Cabal-version:        >= 1.2
 category:             Web
 homepage:             http://github.com/nfjinjing/loli
-data-files:           readme.md, changelog.md, Nemesis, known-issues.md, src/Test.hs
+data-files:           readme.md, changelog.md, Nemesis, known-issues.md, src/Test.hs, views/hello.html
 
 library
   ghc-options: -Wall
@@ -28,3 +28,4 @@ library
                       Network.Loli.Template
                       Network.Loli.Template.TextTemplate
                       Network.Loli.Utils
+
