--- a/loli.cabal
+++ b/loli.cabal
@@ -14,7 +14,7 @@ Build-Depends:        base
 Cabal-version:        >= 1.2
 category:             Web
 homepage:             http://github.com/nfjinjing/loli
-data-files:           readme.md, changelog.md, Nemesis, known-issues.md, src/Test.hs, views/hello.html
+data-files:           readme.md, changelog.md, Nemesis, known-issues.md, src/Test/Test.hs, src/Test/LoliPaste.hs, views/*.html, views/loli_paste/*.html
 
 library
   ghc-options: -Wall
