--- a/loli.cabal
+++ b/loli.cabal
@@ -1,5 +1,5 @@
 Name:                 loli
-Version:              2009.10.13
+Version:              2010.10.9
 Build-type:           Simple
 Synopsis:             A minimum web dev DSL in Haskell
 Description:
@@ -18,7 +18,7 @@ data-files:           readme.md, changelog.md, Nemesis, known-issues.md, src/Tes
 
 library
   ghc-options: -Wall
-  build-depends: base > 4 && <= 5, data-default, hack >= 2009.7.15, hack-contrib >= 2009.8.18, utf8-string, mps >= 2009.9.18, mtl, containers, template, bytestring
+  build-depends: base > 4 && <= 5, data-default, hack >= 2009.7.15, hack-contrib >= 2009.8.18, utf8-string, mps >= 2009.9.18, mtl, containers, template < 0.2, bytestring
   hs-source-dirs: src/
   exposed-modules:  
                       Network.Loli
